<resources>
    <string name="app_name" translatable="false">eDziennik</string>

    <string name="AdminPanel">Admins panel</string>
    <string name="StudentsPanel">Students panel</string>
    <string name="Exercises">Exercises</string>
    <string name="Rate">Rate</string>
    <string name="GenerateCSV">Generate CSV</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="Workstation">Workstation</string>
    <string name="SaveRates">Save rates</string>
    <string name="BeginExercise">Begin exercise</string>
    <string name="AddStudent">Add student</string>
    <string name="Save">Save</string>
    <string name="BeginExerciseDate">Exercise begins at:\n%1$s</string>
    <string name="EndExerciseDate">Exercise finishes at:\n%1$s</string>
    <string name="Major">Major</string>
    <string name="Semester">Semester</string>
    <string name="Section">Section</string>
    <string name="AddExercise">Add exercise</string>
    <string name="AddTask">Add task</string>
    <string name="ProposedGrade">Proposed grade</string>
    <string name="AcceptGrade">Accept grade</string>
    <string name="RateWorkstation">Rate workstation %1$d</string>
    <string name="StudyType">Study type</string>
    <string name="LaboratoryRemoved">Laboratory removed</string>
    <string name="TaskNr">Task no. %1$d</string>
    <string name="Remove">Remove</string>
    <string name="Grade">Grade:</string>
    <string name="ShortTaskNr">Task no. %1$d</string>
    <string name="EditExercise">Edit exercise</string>
    <string name="SelectLaboratory">Select laboratory</string>
    <string name="Select">Select</string>
    <string name="LaboratoryName">Laboratory exercise name</string>
    <string name="FillData">Fill data</string>
    <string name="Students">Students</string>
    <string name="EditStudent">Edit student</string>
    <string name="ConfirmData">Confirm data</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="IsDataValid">Is the data valid?</string>
    <string name="StudentRemoved">Student removed</string>
    <string name="WorkstationNr">Workstation no %1$d</string>
    <string name="SavedFile">Saved file %1$s</string>
    <string name="CouldNotSaveFile">Could not save file, %1$s</string>
    <string name="Tasks">Tasks</string>
    <string name="AuthorisationNeeded">Authorisation needed</string>
    <string name="UseAnotherMethod">Use another method</string>
    <string name="Authorized">Authorized</string>
    <string name="Preferences">Preferences</string>
    <string name="AuthorizationMethod">Authorization method</string>
    <string name="AuthorizationEnabled">Authorization enabled</string>
    <string name="EnableFingerprintAuthorization">Enable fingerprint authorization</string>
    <string name="Security">Security</string>
    <string name="InputPassword">Input password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="None">None</string>
    <string name="PIN" translatable="false">PIN</string>
    <string name="Fingerprint">Fingerprint</string>
    <string name="Password">Password</string>
    <string name="WrongPassword">Wrong password</string>
    <string name="Set">Set</string>
    <string name="NotSet">Not set</string>
    <string name="PasswordCannotBeEmpty">Password cannot be empty</string>
    <string name="AllowOptionalAuthorizationMethod">Allow optional authorization method</string>
    <string name="SaveCsvFilesPath">Save .csv files path</string>
    <string name="General">General</string>
    <string name="CannotChangeSavePath">Cannot change save path</string>
    <string name="NoLaboratoriesToShow">No laboratories to show</string>
    <string name="PleaseSelectDirectory">Please select a directory</string>
    <string name="NoStudentsToRate">No students to rate</string>
    <string name="Rating">Rating</string>
    <string name="UnratedWorkstationColor">Unrated workstation color</string>
    <string name="RatedWorkstationColor">Rated workstation color</string>
    <string name="ForcedGradeColor">Forced grade color</string>

    <string-array name="Grades">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="AuthorisationMethods">
        <item>@string/None</item>
        <item>@string/PIN</item>
        <item>@string/Password</item>
        <item>@string/Fingerprint</item>
    </string-array>

    <string-array name="AuthorisationMethodsValues">
        <item>@string/none_value</item>
        <item>@string/pin_value</item>
        <item>@string/password_value</item>
        <item>@string/fingerprint_value</item>
    </string-array>

    <string name="auth_enabled_key" translatable="false">auth_enabled</string>
    <string name="authorization_method_key" translatable="false">auth_method</string>
    <string name="user_password_key" translatable="false">user_password</string>
    <string name="allow_optional_auth_key" translatable="false">optional_auth_enabled</string>
    <string name="save_csv_path_key" translatable="false">save_csv_path</string>
    <string name="unrated_workstation_key" translatable="false">unrated_workstation_key</string>
    <string name="rated_workstation_key" translatable="false">rated_workstation_key</string>
    <string name="forced_grade_key" translatable="false">forced_grade_key</string>

    <string name="none_value" translatable="false">0</string>
    <string name="pin_value" translatable="false">1</string>
    <string name="fingerprint_value" translatable="false">2</string>
    <string name="password_value" translatable="false">3</string>

    <string name="save_csv_path_default" translatable="false">\data</string>
</resources>
