<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/Security">
        <DropDownPreference
            android:key="@string/authorization_method_key"
            android:title="@string/AuthorizationMethod"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:key="@string/user_password_key"
            android:title="@string/Password"/>
        <SwitchPreferenceCompat
            android:key="@string/allow_optional_auth_key"
            android:title="@string/AllowOptionalAuthorizationMethod"
            app:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/General">
        <Preference
            android:key="@string/save_csv_path_key"
            android:title="@string/SaveCsvFilesPath"/>
    </PreferenceCategory>
</PreferenceScreen>